--- a/poem.rmd
+++ b/poem.rmd
@@ -24,3 +24,14 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+It was so simple: you came back to me  
+And I was happy. Nothing seemed to matter    
+But that. That you had gone away from me  
+And lived for days with him—it didn’t matter.  
+That I had been left to care for our old dog  
+And house alone—couldn’t have mattered less!  
+On all this, you and I and our happy dog  
+Agreed. We slept. The world was worriless.  
+  
+I woke in the morning, brimming with old joys  
+Till the fact-checker showed up, late, for work  
